[package]
name = "pug"
version = "0.1.7"
authors = ["Arvid E. Picciani <aep@exys.org>"]
license = "MIT"
description = "pug.js reimplemented in rust for speed"
repository = "https://github.com/aep/pug-rs"
readme = "README.md"
keywords = ["pug", "jade", "template"]
categories = ["command-line-utilities", "parsing", "web-programming"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
